--- a/websiteapp/templates/websiteapp/index.html
+++ b/websiteapp/templates/websiteapp/index.html
@@ -33,9 +33,8 @@
     <!---Home Section--->
     <section class="home" id="home">
         <div class="home-text">
-            <h3>Hello Welcome To</h3> 
             <h1>Kennix Software Solutions</h1>
-            <h3>Dealers In Professional <span class="multiple-text"></span></h3>
+            <h3><span class="multiple-text"></span></h3>
             <p>Welcome to Kennix Software Solutions – your trusted partner in innovative web
                  development and custom software solutions. At Kennix, we're passionate about
                   harnessing the power of technology to drive your business forward. With a 
@@ -49,9 +48,8 @@
                     Explore our website to learn more about our 
                     services and how we can contribute to your success.
                      Thank you for choosing Kennix Software Solutions – where your 
-                     vision meets our expertise.. For Any Assistance  Call <span>+25479365459</span>
-
-             <br> Reach Me On Social Media
+                     vision meets our expertise.
+             <br> Reach Us On Social Media
             </p>
             <div class="social-media">
                 <a href="#"><i class='bx bxl-facebook'></i></a>
@@ -70,7 +68,7 @@
 <!--About Section-->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="static/images/web.jpg" alt="">
+            <img src="static/images/datacode.jpg" alt="">
         </div>
         <div class="about-content">
             <h2 class="heading">About <span>Us</span></h2>
@@ -87,7 +85,7 @@
             <div class="service-box">
                 <i class='bx bx-code-alt'></i>
                 <h3>Web Development</h3>
-                <p>I develop fast, reliable and responsive fullstack web application that meets
+                <p>We develop fast, reliable and responsive fullstack web applications that meets
                     your business demands. I build web applications for various sector suchs as 
                     e-commerce for businesses, School Management Systsems, Hospital Management Systems and more.
                     For more information on this Click Read More button below.
@@ -98,7 +96,7 @@
             <div class="service-box">
                 <i class='bx bx-code-alt'></i>
                 <h3>Software Development</h3>
-                <p>I develop desktop application softwares using java and python to meet diffrent business needs such 
+                <p>We develop desktop application softwares using java and python to meet diffrent business needs such 
                     hotel management systems for hotels, school management systems for schools and point of systems for
                     for supermarkets. I also provide technical support training For QuickBooks Software.
                 </p>
@@ -108,7 +106,7 @@
             <div class="service-box">
                 <i class='bx bxs-user-rectangle'></i>
                 <h3>User Support</h3>
-                <p>I provide a technical user support for both softwares such erp for organisations and computer hardware
+                <p>We provide a technical user support for both softwares such erp for organisations and computer hardware
                     and network troubleshoot support. I can also do computer hardware fixes and upgrade for various computer
                     components such as RAMS and ROMS for better efficiency. Click Read More for more info
                 </p>
@@ -122,9 +120,9 @@
         <h2 class="heading">Ongoing <span>Projects</span></h2>
         <div class="projects-container">
             <div class="project-box">
-                <img src="static/images/web.jpg"  alt="">
+                <img src="static/images/code.jpg"  alt="">
                 <div class="project-layer">
-                    <h4>The KuKuShop.com</h4>
+                    <h4>ERP</h4>
                     <p>This is an ecomerece platform that aims to link agricultural producers and customers
                         for selling and buying purposes in diffrent parts of the country.
                          
@@ -146,7 +144,7 @@
             <div class="project-box">
                 <img src="static/images/image1.jpg"  alt="">
                 <div class="project-layer">
-                    <h4>School Management System</h4>
+                    <h4>Mobile App</h4>
                     <p>
                         This is a platform that aims to bring all school management aspects into a software that is accessible in the 
                         browser on all screen size devices.
@@ -161,7 +159,7 @@
             <div class="project-box">
                 <img src="static/images/web.jpg"  alt="">
                 <div class="project-layer">
-                    <h4>The KuKuShop.com</h4>
+                    <h4>Customer CRM</h4>
                     <p>This is an ecomerece platform that aims to link agricultural producers and customers
                         for selling and buying purposes in diffrent parts of the country.
                          
@@ -170,9 +168,9 @@
             </div>
 
             <div class="project-box">
-                <img src="static/images/image1.jpg"  alt="">
+                <img src="static/images/data.jpg"  alt="">
                 <div class="project-layer">
-                    <h4>The ProductFinder.com</h4>
+                    <h4>E-commerce</h4>
                     <p>This is a platform which is e-commerce based that will allow users to get shops for products and services
                         that is near to them in their environment.
                          
@@ -181,7 +179,7 @@
             </div>
 
             <div class="project-box">
-                <img src="static/images/image1.jpg"  alt="">
+                <img src="static/images/datacode.jpg"  alt="">
                 <div class="project-layer">
                     <h4>School Management System</h4>
                     <p>
@@ -201,13 +199,13 @@
 
         <form action="">
             <div class="input-box">
-                <input type="text" placeholder="FullNmae">
+                <input type="text" placeholder="FullName">
                 <input type="email" placeholder="Email">
             </div>
 
             <div class="input-box">
                 <input type="number" placeholder="Phone Number">
-                <input type="text" placeholder="Email Subject">
+                <input type="text" placeholder="Subject">
             </div>
             <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
             <input type="submit" value="Send Message" class="btn">
@@ -216,7 +214,7 @@
     <!--Footer Section-->
     <footer class="footer">
         <div class="footer-text">
-            <p>Copyright  &copy; 2023 K-Softwares | All Rights Reserved.</p>
+            <p>Copyright  &copy; 2023 Kennix-Software-Solutions | All Rights Reserved.</p>
         </div>
 
         <div class="footer-iconTop">
