--- a/websiteapp/templates/websiteapp/index.html
+++ b/websiteapp/templates/websiteapp/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="kennix-tech is a software develompment company that based inKenya that deals in the develoment of websites, softwares and computer counsaltancy services">
+    <meta name="keywords" content="kennixtech, tech, kennix-tech, kennix, technology, software, software development, information technology, websites, application, k software, engineering">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
